--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ws)
 
 set( CMAKE_CXX_FLAGS "-Wall -std=c++11" )
 
-add_executable(ws ws.cc args.cc "prefix/prefix.c" "prefix/prefix.cc")
+add_executable(w0rdcr4ck ws.cc args.cc "prefix/prefix.c" "prefix/prefix.cc")
 
